--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <meta property="og:image" content="./src/assets/logo1.jpg" />
+  <meta property="og:url" content="https://i.ibb.co/Ry0232y/vip-tailer-logo.jpg" />
+  <title>Super Shop</title>
 </head>
 
 <body>
